--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,20 +1,19 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: ivanwo # Your GitHub organization or username, where this repository lives
+repo: 2witter-uptime # The name of this repository
 
 sites:
-  - name: 2witter
+  - name: 2witter Uptime
     url: https://2witter.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  # cname: demo.upptime.js.org
+  baseUrl: /
+  name: 2witter Uptime
+  introTitle: ""
+  introMessage: ""
   navbar:
     - title: Status
       href: /
