--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: ivanwo # Your GitHub organization or username, where this repository live
 repo: 2witter-uptime # The name of this repository
 
 sites:
-  - name: 2witter Uptime
+  - name: 2witter
     url: https://2witter.com/
 
 status-website:
